<resources>
    <string name="app_name">卡医生_java</string>
    <string name="home">首页</string>
    <string name="bill">账单</string>
    <string name="card_test">卡·测评</string>
    <string name="share">分享</string>
    <string name="mine">我的</string>
    <string name="tutorial">教程</string>
    <string name="share_app">分享卡医生</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="service_agreement">《卡医生服务协议》</string>
    <string name="share_policy_1"><![CDATA[ 邀请您的好友升级VIP可获得<font color="#000000">100元直接奖励+交易分润万分之10</font> ]]></string>
    <string name="share_policy_2"><![CDATA[ 您好友邀请好友升级VIP，您可获得<font color="#000000">50元间接奖励+交易分润万分之5</font> ]]></string>
    <string name="share_policy_3"></string>
    <string name="vip_policy_1"><![CDATA[ 直接推荐朋友升级VIP，享受<font color="#0085ff">100元</font>+<font color="#0085ff">万分之10</font>奖励；<br/>间接推荐朋友升级VIP，享受<font color="#0085ff">50元</font>+<font color="#0085ff">万分之5</font>奖励。]]></string>
    <string name="org_number">Y1000000006</string>
    <!--升级加盟-->
    <string name="upgrade_mess">升级VIP会员，享受卡医生所有功能和服务，享有区别于普通会员的高级权限，一次升级终身服务。</string>
    <string name="upgrade_vip">VIP会员</string>
    <string name="upgrade_vip_content">三大套餐，解锁不同功能</string>
    <string name="upgrade_agent">代理商</string>
    <string name="upgrade_agent_content">创客、运营商、合伙人</string>
    <string name="upgrade_vip_package">VIP会员套餐</string>
    <string name="open_vip">升级VIP会员</string>

    <!-- 通用 -->
    <string name="loading">加载中...</string>
    <string name="default_content_description" />

    <!--登陆注册页面-->
    <string name="login">登录</string>
    <string name="fast_register">快速注册</string>
    <string name="agreement_tips">登陆/注册即表示您已经阅读和同意</string>
    <string name="agreement">《卡医生服务协议》</string>
    <string name="phone">手机号</string>
    <string name="auth_code">验证码</string>
    <string name="phone_tips">请输入绑定的手机号</string>
    <string name="auth_code_tips">请输入验证码</string>
    <string name="send_auth_code">获取验证码</string>
    <string name="button_next">下一步</string>
    <string name="phone_tips2">请输入手机号</string>
    <string name="phone_tips3">请输入正确的手机号</string>
    <string name="invite_code_tips">请输入邀请码</string>
    <string name="nick_name_tips">请输入昵称</string>
    <string name="password_tips">请输入密码</string>
    <string name="password_new_tips">请输入新密码</string>
    <string name="password_repeat_tips">再次输入确认密码</string>
    <string name="immediately_register">立即注册</string>
    <string name="name_tips">请输入姓名</string>
    <string name="weixin_tips">请输入微信号（选填）</string>
    <string name="city_tips">选择您所在的城市</string>
    <string name="input_phone_num">请输入手机号码</string>
    <string name="psd_tips">请输入密码</string>
    <string name="forget_psd">忘记密码</string>

    <!--忘记密码-->
    <string name="bind_phone">绑定手机</string>
    <string name="new_login_password">新登陆密码</string>
    <string name="confirm_new_login_password">确认新登陆密码</string>
    <string name="input_new_password">输入新密码</string>
    <string name="input_new_password2">请再次输入新密码</string>
    <string name="confirm_reset">确认重置</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="old_login_password">原登陆密码</string>
    <string name="reset_login_password">重置登陆密码</string>

    <!-- 个人中心 -->
    <string name="avatar">头像</string>
    <string name="rest_activation_code">剩余激活码：</string>
    <string name="produce_activation_code">生成激活码</string>
    <string name="my_activation_code">我的邀请码：</string>
    <string name="vip_course">VIP教程</string>
    <string name="qr_share">二维码分享</string>
    <string name="link_share">链接分享</string>
    <string name="today_operation">今日操作</string>
    <string name="plan_list">规划列表</string>
    <string name="day_sel_format">每月%1$02d日</string>
    <string name="card_number_tips">请输入银行卡号</string>
    <string name="bank_card_name">发卡银行</string>
    <string name="bank_phone_tips">请输入银行预留手机号</string>
    <string name="share_sub_run">推荐好友扫码下载 卡医生APP  赚取分润</string>
    <string name="unbind">解绑</string>
    <string name="format_card_id">[尾号%s]</string>
    <string name="format_bill_date">账单日：%s</string>
    <string name="format_repay_date">还款日：%s</string>

    <!-- 账单页面 -->
    <string name="bank_card_tail_num">[%s]</string>
    <string name="income_format">收入：%s</string>
    <string name="pay_format">支出：%s</string>
    <string name="amount_format">￥：%s</string>
    <string name="bill_sync">账单同步</string>
    <string name="smart_plan">智能规划</string>
    <string name="select_card">选择银行卡片</string>
    <string name="bind_card">绑定信用卡</string>
    <string name="select_mode_of_plan">请选择规划方式：</string>
    <string name="select_date">选择还款日期</string>
    <string name="repay_date">还款日期</string>
    <string name="repay_amount">还款总金额</string>
    <string name="input_repay_amount">请填写还款金额(整百)</string>
    <string name="repay_times">还款笔数</string>
    <string name="input_repay_times">请填写还款笔数</string>
    <string name="pos_repay_tips">每笔还款将产生2-3笔消费，建议还款笔数设置在10笔左右</string>
    <string name="auto_repay_tips">每笔还款将产生1-2笔消费，建议还款笔数设置在10笔左右，避免造成过度消费</string>
    <string name="to_plan">进行规划</string>
    <string name="tip">注意：</string>
    <string name="date_list">仅列出可以选择的日期</string>
    <string name="money_format">%1$.2f元</string>
    <string name="num_format">%1$d笔</string>
    <string name="time_format">%1$d年%2$d月%3$d日 - %4$d年%5$d月%6$d日</string>
    <string name="commit">提交</string>
    <string name="date_format">%1$s 至 %2$s</string>
    <string name="year_month_day">%1$04d-%2$02d-%3$02d</string>
    <string name="hour_minute">%1$02d:%2$02d</string>
    <string name="fail_card_list_tips"><![CDATA[ <font color="#ff0000">重要：</font> 有%1$d张卡片交易关闭，激活规划或者重新规划时，请注意卡片还款期限，以免发生逾期。 ]]></string>
    <string name="tips">1、请勿使用储蓄卡测试；\n2、近半年内没有发生交易的卡片请勿查询；\n3、数据的完整性取决于银联返回数据的完整性。\n</string>

    <!--首页-->
    <string name="pos">pos</string>
    <string name="sign">标记</string>
    <string name="pay_back_format">收入：%s 支出：%s</string>
    <string name="trade_time_format">交易时间：%s</string>
    <string name="trade_status_format">交易状态：%s</string>
    <string name="recharge_success">充值成功</string>
    <string name="withdraw_success">提现成功</string>
    <string name="profit">分润 (元)</string>
    <string name="withdrawals_mode">提现方式</string>
    <string name="withdrawals_money">提现金额：</string>
    <string name="input_money">请输入提现金额</string>
    <string name="sure_commit">确认提交</string>
    <string name="account_balance"><![CDATA[ <font color="#FF5A00"><big>%s</big></font><br/><small>账户余额</small> ]]></string>
    <string name="add_up_FenRun"><![CDATA[ <font color="#FF5A00"><big>%s</big></font><br/><small>累计分润</small> ]]></string>

    <!--新版首页-->
    <string name="add_card_app_name">卡医生</string>
    <string name="add_card_content">绑定卡片可前往卡片测评、进行POS消费、自动规划、账单同步等功能，规避风险，信用管理</string>
    <string name="smart_plan_instructions">1、添加信用卡进行智能规划；\n2、银行直联，账单同步；自动还款，智能消费；\n3、线下POS规划，一机万户，全国落地，24小时秒到。</string>
    <string name="tip_receipt">您尚未开通快捷支付，\n点击立即开通即可使用该功能</string>
    <string name="open">立即开通</string>
</resources>
