<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_fragment_normal_efefef"
    tools:context="com.yunkahui.datacubeper.mine.ui.ResetLoginPasswordFragment">


    <com.yunkahui.datacubeper.common.view.SimpleEditTextView
        android:id="@+id/simple_input_item_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20pt"
        app:item_edit_title="@string/phone"
        app:item_edit_input_type="number"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginLeft="15pt"
        android:background="@color/line_gray_DDDDDD"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50pt"
        android:gravity="center_vertical"
        android:paddingLeft="15pt"
        android:paddingRight="15pt"
        android:background="@color/white">

        <TextView
            android:layout_width="100pt"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15pt"
            android:text="验证码"/>

        <EditText
            android:id="@+id/edit_text_auth_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/auth_code_tips"
            android:background="@null"
            android:inputType="number"
            android:lines="1"
            android:textSize="15pt"
            android:layout_weight="1"/>

        <View
            android:layout_width="0.7dp"
            android:layout_height="match_parent"
            android:layout_margin="12pt"
            android:background="@color/line_gray_DDDDDD"/>

        <TextView
            android:id="@+id/text_view_send_auth_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13pt"
            android:textColor="@color/colorPrimary"
            android:text="@string/send_auth_code"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginLeft="15pt"
        android:background="@color/line_gray_DDDDDD"/>

    <com.yunkahui.datacubeper.common.view.SimpleEditTextView
        android:id="@+id/simple_input_item_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20pt"
        app:item_edit_title="@string/old_login_password"
        app:item_edit_input_type="textPassword"
        app:item_edit_hint="@string/password_tips"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginLeft="15pt"
        android:background="@color/line_gray_DDDDDD"/>

    <com.yunkahui.datacubeper.common.view.SimpleEditTextView
        android:id="@+id/simple_input_item_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_edit_title="@string/new_login_password"
        app:item_edit_input_type="textPassword"
        app:item_edit_hint="@string/password_new_tips"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginLeft="15pt"
        android:background="@color/line_gray_DDDDDD"/>

    <com.yunkahui.datacubeper.common.view.SimpleEditTextView
        android:id="@+id/simple_input_item_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_edit_title="@string/confirm_new_login_password"
        app:item_edit_input_type="textPassword"
        app:item_edit_hint="@string/password_repeat_tips"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button_reset"
        android:layout_width="match_parent"
        android:layout_height="50pt"
        android:textColor="@color/white"
        android:enabled="false"
        android:background="@color/bg_button_gray_a9a9a9"
        android:text="@string/confirm_reset"/>

</LinearLayout>
