<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.yunkahui.datacubeper.base.MainActivity">

    <com.yunkahui.datacubeper.common.view.CustomViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ccc" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/MainRadioButton"
            android:checked="true"
            android:drawableTop="@mipmap/ic_home_selected"
            android:text="@string/home" />

        <RadioButton
            android:id="@+id/rb_bill"
            style="@style/MainRadioButton"
            android:drawableTop="@mipmap/ic_bill_normal"
            android:text="@string/bill" />

        <RadioButton
            android:id="@+id/rb_card_test"
            style="@style/MainRadioButton"
            android:drawableTop="@mipmap/ic_card_test_normal"
            android:text="@string/card_test" />

        <RadioButton
            android:id="@+id/rb_share"
            style="@style/MainRadioButton"
            android:drawableTop="@mipmap/ic_share_normal"
            android:text="@string/share" />

        <RadioButton
            android:id="@+id/rb_mine"
            style="@style/MainRadioButton"
            android:drawableTop="@mipmap/ic_mine_normal"
            android:text="@string/mine" />

    </RadioGroup>

</LinearLayout>
