<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <RelativeLayout
        android:id="@+id/rl_select_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12pt">

        <TextView
            android:id="@+id/text_view_repay_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/select_date"
            android:textColor="@color/black"
            android:textSize="14pt" />

        <TextView
            android:id="@+id/tv_repay_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15pt"
            android:layout_toLeftOf="@+id/iv_next"
            android:layout_toRightOf="@+id/text_view_repay_date_title"
            android:ellipsize="end"
            android:gravity="right"
            android:maxLines="2"
            android:text="@string/repay_date"
            android:textSize="14pt" />

        <ImageView
            android:id="@+id/iv_next"
            android:layout_width="24pt"
            android:layout_height="24pt"
            android:layout_alignParentRight="true"
            android:background="@mipmap/ic_next_gray" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5pt"
        android:background="@color/bg_color_gray_f5f5f5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12pt">

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/repay_amount"
            android:textColor="@color/black"
            android:textSize="14pt" />

        <EditText
            android:id="@+id/et_input_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8pt"
            android:layout_toRightOf="@+id/tv_amount"
            android:background="@null"
            android:hint="@string/input_repay_amount"
            android:textColorHint="@color/text_color_gray_949494"
            android:textSize="14pt" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5pt"
        android:background="@color/bg_color_gray_f5f5f5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12pt">

        <TextView
            android:id="@+id/tv_times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/repay_times"
            android:textColor="@color/black"
            android:textSize="14pt" />

        <EditText
            android:id="@+id/et_input_times"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="23pt"
            android:layout_toRightOf="@+id/tv_times"
            android:background="@null"
            android:hint="@string/input_repay_times"
            android:textColorHint="@color/text_color_gray_949494"
            android:textSize="14pt" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8pt"
        android:text="@string/pos_repay_tips"
        android:textColor="@color/text_color_gray_acacac" />

    <TextView
        android:id="@+id/tv_go_plan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15pt"
        android:layout_marginRight="15pt"
        android:background="@drawable/bg_do_plan_button_selector"
        android:enabled="false"
        android:gravity="center"
        android:paddingBottom="8pt"
        android:paddingTop="8pt"
        android:text="@string/to_plan"
        android:textColor="@color/white" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
