<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yunkahui.datacubeper.login.ui.ResetPasswordFragment">


    <LinearLayout
        android:id="@+id/linear_layout_bind_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15pt"
        android:paddingRight="15pt"
        android:layout_marginTop="30pt"
        android:layout_marginBottom="20pt"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150pt"
            android:layout_height="wrap_content"
            android:textSize="14pt"
            android:text="@string/bind_phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:textSize="14pt"
            android:textColor="@color/text_color_gray_949494" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_new_password"
        android:layout_width="match_parent"
        android:layout_height="55pt"
        android:orientation="horizontal"
        android:paddingLeft="15pt"
        android:paddingRight="15pt"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:layout_below="@+id/linear_layout_bind_phone">

        <TextView
            android:layout_width="150pt"
            android:layout_height="wrap_content"
            android:textSize="14pt"
            android:lines="1"
            android:text="@string/new_login_password"/>

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14pt"
            android:inputType="textPassword"
            android:lines="1"
            android:hint="@string/input_new_password"
            android:background="@null"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="55pt"
        android:orientation="horizontal"
        android:paddingLeft="15pt"
        android:paddingRight="15pt"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:layout_below="@+id/linear_layout_new_password">

        <TextView
            android:layout_width="150pt"
            android:layout_height="wrap_content"
            android:textSize="14pt"
            android:lines="1"
            android:text="@string/confirm_new_login_password"/>

        <EditText
            android:id="@+id/edit_text_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14pt"
            android:inputType="textPassword"
            android:lines="1"
            android:hint="@string/input_new_password2"
            android:background="@null"/>

    </LinearLayout>


    <Button
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="50pt"
        android:textSize="14pt"
        android:layout_alignParentBottom="true"
        android:text="@string/confirm_reset"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"/>
</RelativeLayout>
