<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_layout_phone"
        android:layout_width="match_parent"
        android:layout_height="50pt"
        android:layout_marginLeft="15pt"
        android:layout_marginRight="15pt"
        android:layout_marginTop="20pt"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80pt"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="#000000"
            android:textSize="14pt" />

        <EditText
            android:id="@+id/edit_text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/phone_tips"
            android:inputType="phone"
            android:lines="1"
            android:textColorHint="#b4b4b4"
            android:textSize="14pt" />

    </LinearLayout>


    <View
        android:id="@+id/view_line1"
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_below="@+id/linear_layout_phone"
        android:layout_marginLeft="15pt"
        android:layout_marginRight="15pt"
        android:background="#DDDDDD" />


    <LinearLayout
        android:id="@+id/linear_layout_auth_code"
        android:layout_width="match_parent"
        android:layout_height="50pt"
        android:layout_below="@+id/view_line1"
        android:layout_marginLeft="15pt"
        android:layout_marginRight="15pt"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80pt"
            android:layout_height="wrap_content"
            android:text="@string/auth_code"
            android:textColor="#000000"
            android:textSize="14pt" />

        <EditText
            android:id="@+id/edit_text_auth_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/phone_tips"
            android:inputType="number"
            android:lines="1"
            android:textColorHint="#b4b4b4"
            android:textSize="14pt" />

        <View
            android:layout_width="0.7dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="12pt"
            android:layout_marginTop="12pt"
            android:background="#DDDDDD" />

        <TextView
            android:id="@+id/text_view_send_auth_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10pt"
            android:layout_marginStart="10pt"
            android:text="@string/send_auth_code"
            android:textColor="@color/colorPrimary"
            android:textSize="14pt" />

    </LinearLayout>

    <Button
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="50pt"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_button_gray_a9a9a9"
        android:text="@string/button_next"
        android:textColor="@color/white"
        android:textSize="14pt" />

</RelativeLayout>
