<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yunkahui.datacubeper.login.ui.RegisterFirstFragment">

    <EditText
        android:id="@+id/edit_text_phone"
        android:layout_width="match_parent"
        android:layout_height="55pt"
        android:background="@null"
        android:layout_marginLeft="25pt"
        android:layout_marginRight="25pt"
        android:hint="@string/phone_tips2"
        android:drawableLeft="@mipmap/ic_phone"
        android:textSize="16pt"
        android:textColor="#000000"
        android:drawablePadding="15pt"
        android:lines="1"
        android:inputType="phone"
        android:layout_marginTop="50pt"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginLeft="25pt"
        android:layout_marginRight="25pt"
        android:background="@color/line_blue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55pt"
        android:gravity="center_vertical"
        android:layout_marginLeft="25pt"
        android:layout_marginRight="25pt">

        <EditText
            android:id="@+id/edit_text_auth_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/auth_code_tips"
            android:drawableLeft="@mipmap/ic_message"
            android:drawablePadding="15pt"
            android:textSize="16pt"
            android:textColor="#000000"
            android:lines="1"
            android:background="@null"
            android:inputType="number"
            android:layout_weight="1"/>

        <View
            android:layout_width="0.7dp"
            android:layout_height="match_parent"
            android:layout_marginTop="12pt"
            android:layout_marginBottom="12pt"
            android:background="@color/line_blue"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="16pt"
            android:layout_marginLeft="10pt"
            android:text="@string/send_auth_code"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginLeft="25pt"
        android:layout_marginRight="25pt"
        android:background="@color/line_blue"/>

    <EditText
        android:id="@+id/edit_text_invite_code"
        android:layout_width="match_parent"
        android:layout_height="55pt"
        android:background="@null"
        android:layout_marginLeft="25pt"
        android:layout_marginRight="25pt"
        android:hint="@string/invite_code_tips"
        android:drawableLeft="@mipmap/ic_edit_blue"
        android:textSize="16pt"
        android:textColor="#000000"
        android:drawablePadding="15pt"
        android:lines="1"
        android:inputType="number" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginLeft="25pt"
        android:layout_marginRight="25pt"
        android:background="@color/line_blue"/>

    <Button
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="45pt"
        android:text="@string/button_next"
        android:textColor="@color/white"
        android:textSize="16pt"
        android:background="#CCCCCC"
        android:layout_marginLeft="30pt"
        android:layout_marginRight="30pt"
        android:layout_marginTop="40pt"/>


</LinearLayout>
